--- a/mlmodel/templates/userprofile/profile.html
+++ b/mlmodel/templates/userprofile/profile.html
@@ -48,6 +48,14 @@
                   <p>{{ user_profile.about }}</p>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-4">
+                  <p class="fw-bold">Date of birth:</p>
+                </div>
+                <div class="col-8">
+                  <p>{{ user_profile.count }} predictions made</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
